# sg26app

./: pyproject.toml
.devcontainer/: devcontainer.json
notebooks/: 01_exploration.ipynb  SG26_Team_GER.csv  SG26_timeschedule_with_names.csv  SG26_timeschedule_with_names_april26.csv  SG26_timeschedule_with_names_june22.csv  app_m7.py  requirements.txt  sg26app.py
notebooks/.streamlit/: config.toml
